# TSgeometry

./: .gitignore  README.md  pyproject.toml
src/image2las/: __init__.py  batch.py  cli.py  converter.py  gui.py
testimage/: Fused-VNIR-Zuid-20260116-143627-001.cmb.hdr
tests/: test_batch.py  test_converter.py
