[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image2las"
version = "1.4.0"
description = "Convert image-encoded data into a LAS point cloud"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "laspy>=2.5",
  "numpy>=1.24",
  "Pillow>=10.0",
  "tifffile>=2025.5.10",
  "spectral>=0.24",
  "platformdirs>=3.0",
  "pyproj>=3.6",
  "pyshp>=2.3",
]

[project.scripts]
image2las = "image2las.cli:main"

[project.gui-scripts]
image2las-gui = "image2las.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
